...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Product"
        android:paddingTop="8dp"/>

    <Spinner
        android:id="@+id/spinnerProductDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/textAvailableStock"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quantity"
        android:paddingTop="12dp"/>

    <EditText
        android:id="@+id/editQuantityDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ex: 10"
        android:inputType="numberDecimal"/>

</LinearLayout>
...
